--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,6 @@ urlencoding = "2.1"
 yggtracker-redb = "0.1"
 
 [patch.crates-io]
-yggtracker-redb = { git = "https://github.com/YGGverse/yggtracker-redb.git", rev="008402696d81c4b7d4cc7786c9cf3263ae8632b6" }
+# yggtracker-redb = { path = "../yggtracker-redb" }
+yggtracker-redb = { git = "https://github.com/YGGverse/yggtracker-redb.git", rev="e6cdd9c41df4a90c45bf3be2e605a2efb83585b7" }
 librqbit = { git = "https://github.com/ikatson/rqbit.git", rev="b580a9610ae7c6eaacd305a3905f7e2d3202ca69" }
