--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ repository = "https://github.com/YGGverse/yggtrackerd"
 clap = { version = "4.5", features = ["derive"] }
 rocket = "0.5"
 librqbit-core = "5.0"
-chrono = "0.4.41"
-url = "2.5"
+chrono = { version = "0.4.41", features = ["serde"] }
+url = { version = "2.5", features = ["serde"] }
 urlencoding = "2.1"
+rocket_dyn_templates = { version = "0.2", features = ["tera"] }
