--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ url = { version = "2.5", features = ["serde"] }
 urlencoding = "2.1"
 rocket_dyn_templates = { version = "0.2", features = ["tera"] }
 plurify = "0.2"
+rand = "0.9"
