--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.3.4"
 edition = "2024"
 license = "MIT"
 readme = "README.md"
-description = "βtracker is a social BitTorrent aggregator based on the aquatic-crawler API and Rocket web-framework"
+description = "βtracker is a social BitTorrent aggregator based on the aquatic-crawler FS index and Rocket web-framework"
 keywords = ["bittorrent", "aquatic", "aquatic-crawler", "librqbit", "rocket"]
 categories = ["network-programming"]
 repository = "https://github.com/yggverse/btracker"
