--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,17 @@ repository = "https://github.com/yggverse/btracker"
 # homepage = "https://yggverse.github.io"
 
 [dependencies]
-clap = { version = "4.5", features = ["derive"] }
-rocket = "0.5"
-librqbit-core = "5.0"
+btracker-fs = { version = "0.1", features = ["public"] }
 chrono = { version = "0.4.41", features = ["serde"] }
+clap = { version = "4.5", features = ["derive"] }
+librqbit-core = "5.0"
+rand = "0.9"
+rocket = "0.5"
+rocket_dyn_templates = { version = "0.2", features = ["tera"] }
 url = { version = "2.5", features = ["serde"] }
 urlencoding = "2.1"
-rocket_dyn_templates = { version = "0.2", features = ["tera"] }
-rand = "0.9"
+
+# development
+# [patch.crates-io]
+# btracker-fs = { git = "https://github.com/yggverse/btracker-fs.git" }
+# btracker-fs = { path = "../btracker-fs" }
